# ha-camera-qr-code-reader

./: .gitignore  README.md  hacs.json
brands/: README.md
custom_components/qr_rtsp/: __init__.py  config_flow.py  const.py  history.py  icons.json  manifest.json  panel.py  remote_scanner.py  rules.py  scanner.py  sensor.py  services.py  services.yaml  strings.json  websocket_api.py
custom_components/qr_rtsp/fonts/: LICENSE
custom_components/qr_rtsp/frontend/: qr-rtsp-panel.js
custom_components/qr_rtsp/translations/: en.json
rust-service/: .env.example  Cargo.toml  Dockerfile  README.md
rust-service/src/: main.rs  pipeline.rs  protocol.rs  qr.rs
